Fix recents spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,7 +108,7 @@ h3 {
   margin-bottom: 50px;
 }
 
-.recent img {
+.recent .artwork {
   margin-bottom: 30px;
 }
 
